--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "jsx": "react",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment" 
+    "jsxFactory": "h"
   },
   "include": [
     "src"
